Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-04-05 Kimmo
 PATCH: [ 1460749 ] Print relative paths to patch files
  Src: DiffWrapper.cpp DiffWrapper.h MainFrm.cpp MergeDoc.cpp PatchDlg.h
   PatchTool.cpp PatchTool.h
 BUG: [ 1461328 ] Commandline handling overwrites flags?
  Fix from Gal Hammer
  Src: MergeArgs.cpp
 BUG: [ 1460236 ] Splash localization is broken
  Src: Merge.rc resource.h Splash.cpp
  Src/Languages/*: Merge*.rc
 PATCH: [ 1445426 ] Clear PrivateBuild flag in SetResourceVersions.wsf
  Submitted by Perry
  Src: SetResourceVersions.wsf

2006-04-05 Takashi
 BUG: [ 1458714 ] [Replace All] doesn't work
  Src/editlib: ceditreplacedlg.cpp

2006-03-27 Kimmo
 PATCH: [ 1459284 ] Update of MergeSwedish.rc for WinMerge 2.5.3.5+
  Submitted by Hans Eriksson
  Src/Languages/Swedish: MergeSwedish.rc
 PATCH: [ 1458852 ] Fix UI for multiple file patches
  Src: PatchDlg.cpp PatchDlg.h
 PATCH: [ 1441718 ] Auto Complete on files or folders selection
  Submitted by Gal Hammer
  Src/Common: SuperComboBox.cpp SupercompoBox.h
  Src: Merge.rc OpenDlg.cpp OptionsDef.h OptionsInit.cpp PropGeneral.cpp
   PropGeneral.h resource.h
  Src/Languages/*: Merge*.rc

2006-03-26 Kimmo
 PATCH: [ 1458066 ] Use / as path delimiter in patch files
  Src: DiffWrapper.cpp
 PATCH: [ 1406944 ] Compute text statistics in QuickCompare
  Src new file: FileTextStats.h

2006-03-24 Kimmo
 PATCH: [ 1457203 ] Create patch from multiple files in folder compare
  Src: DirView.cpp DirView.h MainFrm.cpp

2006-03-24 Tim
 PATCH: [ 1457306 ] Revamped Visual Basic syntax highlighter
  Src\editlib: basic.cpp

2006-03-24 Kimmo
 BUG: [ 1455656 ] GPL text still contains 'How to Apply These Terms...'
  Docs/Users: GPL.rtf

2006-03-22 WinMerge experimental release 2.5.3.5 (cvs)

2006-03-22 Kimmo
 PATCH: [ 1455706 ] Catalan translation update
  Submitted by Jordi Vilar
  Src/Languages/Catalan: MergeCatalan.rc