@@ -6,7 +6,7 @@
 //  Copyright:  Ferdinand Prantl, portions by Stcherbatchenko Andrei
 //  E-mail:     prantl@ff.cuni.cz
 //
-//  HTML syntax highlighing definition
+//  ASP syntax highlighing definition
 //
 //  You are free to use or modify this code to the following restrictions:
 //  - Acknowledge me somewhere in your about box, simple "Parts of code by.."
@@ -30,9 +30,12 @@ static LPTSTR s_apszHtmlKeywordList[] =
     // HTML section
     _T ("DOCTYPE"),
     _T ("PUBLIC"),
-    _T ("FRAME"),
+    _T ("HTML"),
+    // frames
     _T ("FRAMESET"),
+    _T ("FRAME"),
     _T ("NOFRAMES"),
+    _T ("IFRAME"),
     // HEAD section
     _T ("HEAD"),
     _T ("TITLE"),
@@ -40,7 +43,9 @@ static LPTSTR s_apszHtmlKeywordList[] =
     _T ("META"),
     _T ("LINK"),
     _T ("BASE"),
+    _T ("BASEFONT"),
     _T ("SCRIPT"),
+    _T ("NOSCRIPT"),
     _T ("STYLE"),
     // BODY section
     _T ("BODY"),
@@ -70,11 +75,6 @@ static LPTSTR s_apszHtmlKeywordList[] =
     _T ("SPAN"),
     _T ("CENTER"),
     _T ("HR"),
-    _T ("FORM"),
-    _T ("TABLE"),
-    _T ("LEFT"),
-    _T ("RIGHT"),
-    _T ("TOP"),
     // logical markup
     _T ("EM"),
     _T ("STRONG"),
@@ -84,100 +84,182 @@ static LPTSTR s_apszHtmlKeywordList[] =
     _T ("KBD"),
     _T ("VAR"),
     _T ("CITE"),
+    _T ("Q"),
+    _T ("ACRONYM"),
+    _T ("ABBR"),
+    _T ("INS"),
+    _T ("DEL"),
+    _T ("BDO"),
     // physical markup
     _T ("TT"),
     _T ("I"),
     _T ("B"),
     _T ("U"),
     _T ("STRIKE"),
+    _T ("S"),
     _T ("BIG"),
     _T ("SMALL"),
     _T ("SUB"),
     _T ("SUP"),
     // special markup
     _T ("A"),
-    _T ("BASEFONT"),
     _T ("IMG"),
     _T ("APPLET"),
+    _T ("OBJECT"),
     _T ("PARAM"),
     _T ("FONT"),
     _T ("BR"),
     _T ("MAP"),
     _T ("AREA"),
     // forms
+    _T ("FORM"),
     _T ("INPUT"),
+    _T ("TEXTAREA"),
     _T ("SELECT"),
     _T ("OPTION"),
-    _T ("TEXTAREA"),
-    _T ("ONCLICK"),
+    _T ("OPTGROUP"),
+    _T ("BUTTON"),
+    _T ("FIELDSET"),
+    _T ("LEGEND"),
+    _T ("LABEL"),
     // tables
-    _T ("CAPTION"),
+    _T ("TABLE"),
     _T ("TR"),
     _T ("TH"),
     _T ("TD"),
-    _T ("HTML"),
+    _T ("COLGROUP"),
+    _T ("COL"),
+    _T ("THEAD"),
+    _T ("TBODY"),
+    _T ("TFOOT"),
+    _T ("CAPTION"),
     NULL
   };
 
 static LPTSTR s_apszUser1KeywordList[] =
   {
+    _T ("ABBR"),
+    _T ("ACCEPT"),
+    _T ("ACCEPT-CHARSET"),
+    _T ("ACCESSKEY"),
     _T ("ACTION"),
     _T ("ALIGN"),
     _T ("ALINK"),
+    _T ("ALT"),
+    _T ("ARCHIVE"),
+    _T ("AXIS"),
     _T ("BACKGROUND"),
     _T ("BGCOLOR"),
-    _T ("COLOR"),
-    _T ("COMPACT"),
-    _T ("CONTENT"),
-    _T ("ENCTYPE"),
-    _T ("FACE"),
-    _T ("HEIGHT"),
-    _T ("HREF"),
-    _T ("HTTP-EQUIV"),
-    _T ("LINK"),
-    _T ("METHOD"),
-    _T ("NAME"),
-    _T ("PROMPT"),
-    _T ("REL"),
-    _T ("REV"),
-    _T ("START"),
-    _T ("TEXT"),
-    _T ("TYPE"),
-    _T ("VALUE"),
-    _T ("VLINK"),
-    _T ("WIDTH"),
-    _T ("ADD_DATE"),
-    _T ("ALT"),
     _T ("BORDER"),
     _T ("CELLPADDING"),
     _T ("CELLSPACING"),
+    _T ("CHAR"),
+    _T ("CHAROFF"),
+    _T ("CHARSET"),
     _T ("CHECKED"),
+    _T ("CITE"),
+    _T ("CLASS"),
+    _T ("CLASSID"),
     _T ("CLEAR"),
     _T ("CODE"),
     _T ("CODEBASE"),
+    _T ("CODETYPE"),
+    _T ("COLOR"),
     _T ("COLS"),
     _T ("COLSPAN"),
+    _T ("COMPACT"),
+    _T ("CONTENT"),
     _T ("COORDS"),
-    _T ("FOLDED"),
+    _T ("DATA"),
+    _T ("DATAFLD"),
+    _T ("DATAFORMATAS"),
+    _T ("DATASRC"),
+    _T ("DATETIME"),
+    _T ("DECLARE"),
+    _T ("DEFER"),
+    _T ("DIR"),
+    _T ("DISABLED"),
+    _T ("ENCTYPE"),
+    _T ("EVENT"),
+    _T ("FACE"),
+    _T ("FOR"),
+    _T ("FRAME"),
+    _T ("FRAMEBORDER"),
+    _T ("HEADERS"),
+    _T ("HEIGHT"),
+    _T ("HREF"),
+    _T ("HREFLANG"),
     _T ("HSPACE"),
+    _T ("HTTP-EQUIV"),
+    _T ("ID"),
     _T ("ISMAP"),
-    _T ("LAST_MODIFIED"),
-    _T ("LAST_VISIT"),
+    _T ("LABEL"),
+    _T ("LANG"),
+    _T ("LANGUAGE"),
+    _T ("LINK"),
+    _T ("LONGDESC"),
+    _T ("MARGINHEIGHT"),
+    _T ("MARGINWIDTH"),
     _T ("MAXLENGTH"),
+    _T ("MEDIA"),
+    _T ("METHOD"),
     _T ("MULTIPLE"),
+    _T ("NAME"),
+    _T ("NOHREF"),
     _T ("NORESIZE"),
     _T ("NOSHADE"),
     _T ("NOWRAP"),
+    _T ("ONBLUR"),
+    _T ("ONCHANGE"),
+    _T ("ONCLICK"),
+    _T ("ONDBLCLICK"),
+    _T ("ONFOCUS"),
+    _T ("ONKEYDOWN"),
+    _T ("ONKEYPRESS"),
+    _T ("ONKEYUP"),
+    _T ("ONLOAD"),
+    _T ("ONMOUSEDOWN"),
+    _T ("ONMOUSEMOVE"),
+    _T ("ONMOUSEOUT"),
+    _T ("ONMOUSEOVER"),
+    _T ("ONMOUSEUP"),
+    _T ("ONRESET"),
+    _T ("ONSELECT"),
+    _T ("ONSUBMIT"),
+    _T ("ONUNLOAD"),
+    _T ("PROFILE"),
+    _T ("PROMPT"),
+    _T ("READONLY"),
+    _T ("REL"),
+    _T ("REV"),
     _T ("ROWS"),
     _T ("ROWSPAN"),
+    _T ("RULES"),
+    _T ("SCHEME"),
+    _T ("SCOPE"),
+    _T ("SCROLLING"),
     _T ("SELECTED"),
     _T ("SHAPE"),
     _T ("SIZE"),
+    _T ("SPAN"),
     _T ("SRC"),
+    _T ("STANDBY"),
+    _T ("START"),
+    _T ("STYLE"),
+    _T ("SUMMARY"),
+    _T ("TABINDEX"),
     _T ("TARGET"),
+    _T ("TEXT"),
+    _T ("TITLE"),
+    _T ("TYPE"),
     _T ("USEMAP"),
     _T ("VALIGN"),
+    _T ("VALUE"),
+    _T ("VALUETYPE"),
+    _T ("VERSION"),
+    _T ("VLINK"),
     _T ("VSPACE"),
+    _T ("WIDTH"),
     NULL
   };
 
@@ -186,7 +268,6 @@ static LPTSTR s_apszUser2KeywordList[] =
     _T ("nbsp"),
     _T ("quot"),
     _T ("amp"),
-    _T ("lt"),
     _T ("lt"),
     _T ("gt"),
     _T ("copy"),
